--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.addressables": "1.22.2",
     "com.unity.collab-proxy": "2.5.1",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.inputsystem": "1.7.0",
     "com.unity.netcode.gameobjects": "1.11.0",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
