--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,11 +3,13 @@
     "com.unity.addressables": "1.22.2",
     "com.unity.ads": "4.4.2",
     "com.unity.analytics": "3.8.1",
+    "com.unity.cinemachine": "2.10.1",
     "com.unity.collab-proxy": "2.5.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.netcode.gameobjects": "1.11.0",
     "com.unity.purchasing": "4.11.0",
+    "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
