--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.solidalloy.missing-script-type": "1.1.0",
+    "com.solidalloy.util": "1.40.0",
     "com.unity.addressables": "1.22.2",
     "com.unity.ads": "4.4.2",
     "com.unity.ai.navigation": "1.1.5",
@@ -46,5 +48,16 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.openupm",
+        "com.solidalloy",
+        "org.nuget"
+      ]
+    }
+  ]
 }
